fixed form-box so that it sticks to the top when the viewport is too small

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,10 +23,14 @@ body {
     width: 100vw;
     background-color: var(--bg);
     overflow-x: hidden;
+    .column {
+        justify-content: space-evenly;
+    }
 }
 
 .form-box {
     margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 8px;
     width: auto;
     padding: 40px;
